--- a/index.html
+++ b/index.html
@@ -3,13 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/home.css">
+    <link rel="icon" href="./images/logo.svg">
+    <link rel="stylesheet" href="./css/main.css">
     <style type="text/tailwindcss">
     </style>
     <title>Moon</title>
 </head>
 <body>
-    
+    <header class="site-header pt-[40px]">
+       <div class="containers flex items-center justify-between">
+        <a href="./index.html"><img src="./images/logo.svg" alt="logo" width="48" height="48"></a>
+        <nav class=" flex items-center gap-[48px]">
+            <a class="border-b-4 border-[white] py-[38px] flex gap-[11px] items-center" href="#">
+                <img src="./images/00.svg" alt="son" width="18" height="18">
+                <p class="navbar-link font-[normal] text-[16px] text-[white]">HOME</p>
+            </a>
+             <a class="py-[38px] flex gap-[11px] items-center" href="#">
+                <img src="./images/00.svg" alt="son" width="18" height="18">
+                <p class="navbar-link font-[normal] text-[16px] text-[white]">DESTINATION</p>
+            </a>
+             <a class="py-[38px] flex gap-[11px] items-center" href="#">
+                <img src="./images/00.svg" alt="son" width="18" height="18">
+                <p class="navbar-link font-[normal] text-[16px] text-[white]">CREW</p>
+            </a>
+             <a class="py-[38px] flex gap-[11px] items-center" href="#">
+                <img src="./images/00.svg" alt="son" width="18" height="18">
+                <p class="navbar-link font-[normal] text-[16px] text-[white]">TECHNOLOGY</p>
+            </a>
+        </nav>
+       </div>
+    </header>
+    <main>
+        <section class="mt-[250px] mb-[130px]">
+           <div class="containers flex justify-between ">
+             <div class="w-[445px]">
+                <h3 class="hero-text mb-[24px] text-[white]">SO, YOU WANT TO TRAVEL TO</h3>
+                <h1 class="hero-title mb-[24px]">SPACE</h1>
+                <p class="hero-subtext">Let’s face it; if you want to go to space, you might as well genuinely go to outer space and not hover kind of on the edge of it. Well sit back, and relax because we’ll give you a truly out of this world experience!q</p>
+            </div>
+            <img src="./images/explore.png" alt="explore" width="340" height="274">
+           </div>
+        </section>
+    </main>
 
 
 
